fix(dropdown-menu): fix positioning for responsive dropdown menu (#3149)
* fix(dropdown-menu): scrollbar only shows in x-axis and when necessary

* fix(dropdown-menu): fix submenu from showing below the viewport

--- a/src/components/dropdown-menu/DropdownMenu.scss
+++ b/src/components/dropdown-menu/DropdownMenu.scss
@@ -36,7 +36,7 @@
         .aria-menu:not(.submenu) {
             height: 100%;
             margin-top: $bdl-header-height;
-            overflow: scroll;
+            overflow-x: auto;
             background-color: $bdl-gray-02;
             border: none;
             border-radius: 0;
@@ -54,13 +54,15 @@
                 box-shadow: $bdl-header-box-shadow;
             }
 
-            .submenu {
+            .submenu:not(.is-hidden) {
                 top: 100%;
                 right: 0;
+                bottom: auto;
                 left: auto;
 
-                &.is-hidden {
-                    display: none;
+                &.is-right-bottom-aligned {
+                    top: auto;
+                    bottom: 100%;
                 }
             }
         }
